--- a/app/assets/stylesheets/user_tasks.scss
+++ b/app/assets/stylesheets/user_tasks.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the UserTasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#task-form {
+    display: none;
+}
+
+// body {
+//     background: tomato;
+// }
