--- a/app/views/user_tasks/_user_task.html.erb
+++ b/app/views/user_tasks/_user_task.html.erb
@@ -2,4 +2,6 @@
     <%= user_task.description %>
     <%= user_task.due %>
     <%= link_to "Edit", edit_user_task_path(user_task), remote: true %>
+    <%= link_to "Complete", user_task, remote: true, method: :delete, data: {
+        confirm: "Are you sure?" } %>
 </div>
