--- a/app/assets/stylesheets/user_tasks.scss
+++ b/app/assets/stylesheets/user_tasks.scss
@@ -7,6 +7,19 @@
     display: none;
 }
 
+a {
+    &:hover {
+        text-decoration: none;
+    }
+    text-decoration: none;
+}
+
+.well {
+    a:hover {
+        text-decoration: line-through;
+    }
+}
+
 // body {
 //     background: tomato;
 // }
