--- a/app/views/user_tasks/_user_task.html.erb
+++ b/app/views/user_tasks/_user_task.html.erb
@@ -1,7 +1,10 @@
 <div class="well">
-    <%= user_task.description %>
-    <%= user_task.due %>
-    <%= link_to "Edit", edit_user_task_path(user_task), remote: true %>
-    <%= link_to "Complete", user_task, remote: true, method: :delete, data: {
+    <%= link_to user_task.description, user_task, remote: true, method: :delete, data: {
         confirm: "Are you sure?" } %>
+    
+    <%= link_to fa_icon('pencil'), edit_user_task_path(user_task), remote: true %>
+        
+    <div class="pull-right">
+        <%= user_task.due.stamp('April 29, 1976') if user_task.due %>
+    </div>
 </div>
